--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,8 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
 
+  padding: 40px;
+
   width: 528px;
   height: 581px;
 
@@ -344,7 +346,186 @@ a {
   height: 11px;
 }
 
-/* ==================== section ==================== */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.modal-form-title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: var(--primary-text-color);
+}
+.modal-form-field {
+  margin-bottom: 10px;
+}
+
+.modal-form-field-message {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.modal-form-input-desc {
+  display: block;
+
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: var(--secondary-text-color);
+}
+
+.modal-form-input {
+  padding-left: 42px;
+
+  width: 100%;
+  height: 40px;
+
+  font-size: 16px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input-wrapper {
+  display: block;
+  position: relative;
+}
+
+.modal-form-input-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+
+  width: 12px;
+  height: 12px;
+
+  fill: var(--primary-text-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--active-color);
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: var(--active-color);
+}
+
+.modal-form-message {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: var(--primary-text-color);
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-form-message:focus {
+  outline: none;
+  border-color: var(--active-color);
+}
+
+.modal-form-check-desc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.71;
+
+  margin-bottom: 30px;
+
+  color: var(--secondary-text-color);
+}
+
+.modal-form-check-desc::before {
+  display: block;
+  content: '';
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--primary-text-color);
+  border-radius: 2px;
+  cursor: pointer;
+
+  margin-right: 8px;
+
+  transition: background-color 250ms;
+}
+
+.modal-form-check:checked + .modal-form-check-desc::before {
+  background-color: var(--active-color);
+  background-image: url(../images/icon/checkbox-icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  border-color: transparent;
+}
+
+.modal-form-check:focus + .modal-form-check-desc::before {
+  outline: 2px solid var(--active-color);
+}
+
+.user-policy-link {
+  color: var(--active-color);
+  text-decoration: underline;
+}
+
+.modal-form-submit {
+  min-width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  padding: 10px 52px;
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  color: var(--bg-color);
+  background-color: var(--active-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: transparent;
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+  outline: none;
+  background-color: #188ce8;
+}
+
+/* ==================== section ====================*/
 
 .hidden {
   position: absolute;
@@ -735,10 +916,7 @@ a {
 .footer-address-social {
   display: flex;
   align-items: baseline;
-}
-
-.social {
-  margin-left: 70px;
+  justify-content: space-between;
 }
 
 .social-title {
@@ -754,7 +932,6 @@ a {
 
 .social-list {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 
@@ -796,4 +973,85 @@ a {
 .social-link:hover,
 .social-link:focus {
   background-color: var(--active-color);
+}
+
+.footer-form-desc {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+
+  text-transform: uppercase;
+
+  color: var(--bg-color);
+}
+
+.footer-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-form-input {
+  padding-left: 16px;
+
+  min-width: 358px;
+  height: 50px;
+
+  font-size: 16px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--bg-color);
+
+  background-color: transparent;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-input:focus {
+  outline: none;
+  border-color: var(--active-color);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  height: 50px;
+
+  margin-left: 12px;
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  color: var(--bg-color);
+  background-color: var(--active-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: transparent;
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-form-input-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+
+  fill: var(--bg-color);
 }
